--- a/code_safety.yml
+++ b/code_safety.yml
@@ -27,7 +27,7 @@ file safety:
   CHANGELOG.md:
     comments: 
     reviewed_by: ollietulloch
-    safe_revision: 9af6ea0bcdac493fe5f31d62b504b285658867c4
+    safe_revision: 8e66f9ea2d880e368446969c3b0e63a1660cb427
   CODE_OF_CONDUCT.md:
     comments: 
     reviewed_by: drewthorp
@@ -81,7 +81,7 @@ file safety:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
     reviewed_by: ollietulloch
-    safe_revision: e549c0dcafdd6004ec279bd256fae8b9964c9629
+    safe_revision: b0b092613c94a8c2f04191dbe2a1a347c8e14d16
   lib/canql/grammars/batch_types.treetop:
     comments: 
     reviewed_by: josh.pencheon
@@ -107,8 +107,8 @@ file safety:
   lib/canql/grammars/patient.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
-    reviewed_by: josh.pencheon
-    safe_revision: 7490099869e368dcd5c26ded11eb90229baf4cae
+    reviewed_by: ollietulloch
+    safe_revision: 481194575c30b48987f957a9cc5535d604ea0117
   lib/canql/grammars/perinatal_hospital.treetop:
     comments: 
     reviewed_by: josh.pencheon
@@ -165,8 +165,8 @@ file safety:
     safe_revision: 361dea5dc6d64bdb7b03434dd2878f8c3b128c95
   lib/canql/nodes/patient.rb:
     comments: 
-    reviewed_by: josh.pencheon
-    safe_revision: 7490099869e368dcd5c26ded11eb90229baf4cae
+    reviewed_by: ollietulloch
+    safe_revision: 481194575c30b48987f957a9cc5535d604ea0117
   lib/canql/nodes/perinatal_hospital.rb:
     comments: 
     reviewed_by: josh.pencheon
@@ -194,7 +194,7 @@ file safety:
   lib/canql/version.rb:
     comments: 
     reviewed_by: ollietulloch
-    safe_revision: 9af6ea0bcdac493fe5f31d62b504b285658867c4
+    safe_revision: 8e66f9ea2d880e368446969c3b0e63a1660cb427
   test/anomaly_test_helper.rb:
     comments: 
     reviewed_by: ollietulloch
@@ -209,8 +209,8 @@ file safety:
     safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
   test/nodes/anomaly_test.rb:
     comments: 
-    reviewed_by: josh.pencheon
-    safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+    reviewed_by: ollietulloch
+    safe_revision: b0b092613c94a8c2f04191dbe2a1a347c8e14d16
   test/nodes/case_age_test.rb:
     comments: 
     reviewed_by: josh.pencheon
@@ -249,8 +249,8 @@ file safety:
     safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
   test/nodes/patient_test.rb:
     comments: 
-    reviewed_by: josh.pencheon
-    safe_revision: 43425805d9ad4a99e63eeb5d50495fa14eaa053b
+    reviewed_by: ollietulloch
+    safe_revision: 481194575c30b48987f957a9cc5535d604ea0117
   test/nodes/perinatal_hospital_test.rb:
     comments: 
     reviewed_by: josh.pencheon
