--- a/code_safety.yml
+++ b/code_safety.yml
@@ -11,7 +11,7 @@ file safety:
   ".github/workflows/test.yml":
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: 865fc970554fee9207f8e3cd0247133c6a849b24
+    safe_revision: a3f5265f1d20a6dcb8c45ab5f09207ca7d1e255c
   ".gitignore":
     comments: 
     reviewed_by: timgentry
@@ -26,8 +26,8 @@ file safety:
     safe_revision: 146b255b240b0efc928d39dd1b70ab221ddc3138
   CHANGELOG.md:
     comments: 
-    reviewed_by: ollietulloch
-    safe_revision: 8e66f9ea2d880e368446969c3b0e63a1660cb427
+    reviewed_by: josh.pencheon
+    safe_revision: 154d287a89e13c77b34642ffb33eb4c07953aa1b
   CODE_OF_CONDUCT.md:
     comments: 
     reviewed_by: drewthorp
@@ -43,7 +43,7 @@ file safety:
   README.md:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: 8c07968aa84db92b6f1cc528180f73530ddc6ff5
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   Rakefile:
     comments: 
     reviewed_by: timgentry
@@ -71,7 +71,7 @@ file safety:
   lib/canql/grammars.rb:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: c5f8f76b2c335a8554f39a14d6165bf5cd8f9b67
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/grammars/age.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
@@ -99,11 +99,15 @@ file safety:
     comments: 
     reviewed_by: josh.pencheon
     safe_revision: 526dbe8a3dc3334b4174928e6f51d07e48ed9247
+  lib/canql/grammars/hes_event.treetop:
+    comments: 
+    reviewed_by: josh.pencheon
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/grammars/main.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
     reviewed_by: josh.pencheon
-    safe_revision: 9bb663b220e76e78f3f0f48e4bc6334fe9451925
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/grammars/patient.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
@@ -134,7 +138,7 @@ file safety:
   lib/canql/nodes.rb:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: c5f8f76b2c335a8554f39a14d6165bf5cd8f9b67
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/nodes/age.rb:
     comments: 
     reviewed_by: timgentry
@@ -159,10 +163,14 @@ file safety:
     comments: 
     reviewed_by: josh.pencheon
     safe_revision: 526dbe8a3dc3334b4174928e6f51d07e48ed9247
+  lib/canql/nodes/hes_event.rb:
+    comments: 
+    reviewed_by: josh.pencheon
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/nodes/main.rb:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: 361dea5dc6d64bdb7b03434dd2878f8c3b128c95
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   lib/canql/nodes/patient.rb:
     comments: 
     reviewed_by: ollietulloch
@@ -193,8 +201,8 @@ file safety:
     safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
   lib/canql/version.rb:
     comments: 
-    reviewed_by: ollietulloch
-    safe_revision: 8e66f9ea2d880e368446969c3b0e63a1660cb427
+    reviewed_by: josh.pencheon
+    safe_revision: 154d287a89e13c77b34642ffb33eb4c07953aa1b
   test/anomaly_test_helper.rb:
     comments: 
     reviewed_by: ollietulloch
@@ -203,6 +211,10 @@ file safety:
     comments: 
     reviewed_by: timgentry
     safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+  test/hes_event_test_helper.rb:
+    comments: 
+    reviewed_by: josh.pencheon
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   test/minitest_helper.rb:
     comments: 
     reviewed_by: timgentry
@@ -231,6 +243,10 @@ file safety:
     comments: 
     reviewed_by: josh.pencheon
     safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+  test/nodes/hes_event_test.rb:
+    comments: 
+    reviewed_by: josh.pencheon
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   test/nodes/main_case_test.rb:
     comments: 
     reviewed_by: josh.pencheon
@@ -270,7 +286,7 @@ file safety:
   test/parser_test.rb:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: 293248a17d087d7557a6aacdcb5bf3fbec946b87
+    safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   test/test_helper.rb:
     comments: 
     reviewed_by: josh.pencheon
