--- a/code_safety.yml
+++ b/code_safety.yml
@@ -27,7 +27,7 @@ file safety:
   CHANGELOG.md:
     comments: 
     reviewed_by: ollietulloch
-    safe_revision: 80a300b5aeadf74ca952d4adc4a7a49595e3cc6d
+    safe_revision: ce307f20916a4866631128076b4dbfa821d9c780
   CODE_OF_CONDUCT.md:
     comments: 
     reviewed_by: drewthorp
@@ -93,8 +93,8 @@ file safety:
     safe_revision: 2346abb4435bf95cbe9b4d8c124123b9fefe60d6
   lib/canql/grammars/e_base_records.treetop:
     comments: 
-    reviewed_by: josh.pencheon
-    safe_revision: 4e26ac746098452b01dac88373e401e39f309b74
+    reviewed_by: ollietulloch
+    safe_revision: b7af9756bba9a1c67d05dda58c6b7446827f1a7e
   lib/canql/grammars/genetic_test.treetop:
     comments: 
     reviewed_by: josh.pencheon
@@ -202,7 +202,7 @@ file safety:
   lib/canql/version.rb:
     comments: 
     reviewed_by: ollietulloch
-    safe_revision: 80a300b5aeadf74ca952d4adc4a7a49595e3cc6d
+    safe_revision: ce307f20916a4866631128076b4dbfa821d9c780
   test/anomaly_test_helper.rb:
     comments: 
     reviewed_by: ollietulloch
@@ -238,7 +238,7 @@ file safety:
   test/nodes/e_base_records_test.rb:
     comments: 
     reviewed_by: ollietulloch
-    safe_revision: bdbff32b03f27a487a68f72f8663215282bf62b6
+    safe_revision: b7af9756bba9a1c67d05dda58c6b7446827f1a7e
   test/nodes/genetic_tests_test.rb:
     comments: 
     reviewed_by: josh.pencheon
