--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,25 @@ jobs:
     strategy:
       matrix:
         ruby-version:
-          - 2.6
-          - 2.7
-          - 3.0
+          - '2.7'
+          - '3.0'
+          - '3.1'
+        gemfile:
+          - gemfiles/Gemfile.rails60
+          - gemfiles/Gemfile.rails61
+          - gemfiles/Gemfile.rails70
+        exclude:
+          # rails 7.0 requires ruby >= 2.7
+          # https://www.fastruby.io/blog/ruby/rails/versions/compatibility-table.html
+          - ruby-version: '2.6'
+            gemfile: 'gemfiles/Gemfile.rails70'
 
-    name: Ruby ${{ matrix.ruby-version }}
+    name: Ruby ${{ matrix.ruby-version }} / Bundle ${{ matrix.gemfile }}
 
     runs-on: ubuntu-latest
+
+    env:
+      BUNDLE_GEMFILE: ${{ matrix.gemfile }}
 
     steps:
     - uses: actions/checkout@v2
