--- a/code_safety.yml
+++ b/code_safety.yml
@@ -26,16 +26,16 @@ file safety:
     safe_revision: 146b255b240b0efc928d39dd1b70ab221ddc3138
   CHANGELOG.md:
     comments:
-    reviewed_by: kennylee
-    safe_revision: 89dc1b1db12924d48e7baa21894db1f89c16d63b
+    reviewed_by: kenny.lee
+    safe_revision: 5708e2f7cb8d87de5d4799a9eda01c5b5c6587c0
   CODE_OF_CONDUCT.md:
     comments:
     reviewed_by: drewthorp
     safe_revision: 6a666fcabe027056b1c774b2eabb3fdf686911d2
   Gemfile:
     comments:
-    reviewed_by: timgentry
-    safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   LICENSE.txt:
     comments:
     reviewed_by: drewthorp
@@ -58,20 +58,20 @@ file safety:
     safe_revision: 6a666fcabe027056b1c774b2eabb3fdf686911d2
   canql.gemspec:
     comments:
-    reviewed_by: drewthorp
-    safe_revision: c40b4facb6f7d5dc5173345b46343c0ecc18f816
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   gemfiles/Gemfile.rails60:
     comments:
-    reviewed_by: drewthorp
-    safe_revision: bb23804bc7e1a57efd6b2bdc3b225e2251699492
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   gemfiles/Gemfile.rails61:
     comments:
-    reviewed_by: drewthorp
-    safe_revision: bb23804bc7e1a57efd6b2bdc3b225e2251699492
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   gemfiles/Gemfile.rails70:
     comments:
-    reviewed_by: drewthorp
-    safe_revision: bb23804bc7e1a57efd6b2bdc3b225e2251699492
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql.rb:
     comments:
     reviewed_by: timgentry
@@ -92,8 +92,8 @@ file safety:
   lib/canql/grammars/anomaly.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
-    reviewed_by: drewthorp
-    safe_revision: c40b4facb6f7d5dc5173345b46343c0ecc18f816
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/batch_types.treetop:
     comments:
     reviewed_by: kenny.lee
@@ -109,22 +109,22 @@ file safety:
     safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
   lib/canql/grammars/events.treetop:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/genetic_test.treetop:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 526dbe8a3dc3334b4174928e6f51d07e48ed9247
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/main.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/patient.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/perinatal_hospital.treetop:
     comments:
     reviewed_by: josh.pencheon
@@ -141,128 +141,128 @@ file safety:
   lib/canql/grammars/test_result.treetop:
     comments: It is a known issue that this is potentially susceptible to certain
       kinds of DoS attack
-    reviewed_by: timgentry
-    safe_revision: c39d24bb500719971969762e94545e82866bf92f
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/grammars/test_result_group.treetop:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 9bb663b220e76e78f3f0f48e4bc6334fe9451925
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes.rb:
     comments:
     reviewed_by: kennylee
     safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
   lib/canql/nodes/age.rb:
     comments:
-    reviewed_by: timgentry
-    safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/anomaly.rb:
     comments:
-    reviewed_by: ollietulloch
-    safe_revision: e549c0dcafdd6004ec279bd256fae8b9964c9629
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/batch_types.rb:
     comments:
     reviewed_by: kenny.lee
     safe_revision: 49d17e254a95d50dea1448ca59fd45c44937d661
   lib/canql/nodes/dates.rb:
     comments:
-    reviewed_by: timgentry
-    safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/e_base_records.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 4805609963f75639e2444df8f42d2d6d65005b7c
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/events.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/genetic_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 526dbe8a3dc3334b4174928e6f51d07e48ed9247
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/main.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/patient.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/patient_events.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/perinatal_hospital.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: c431b8a476b84d077e9c39a2a13c2b17a296773d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/registry.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 4e26ac746098452b01dac88373e401e39f309b74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/test_result.rb:
     comments:
-    reviewed_by: timgentry
-    safe_revision: c39d24bb500719971969762e94545e82866bf92f
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/nodes/test_result_group.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 9bb663b220e76e78f3f0f48e4bc6334fe9451925
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/parser.rb:
     comments:
     reviewed_by: timgentry
     safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
   lib/canql/treetop/extensions.rb:
     comments:
-    reviewed_by: timgentry
-    safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   lib/canql/version.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: 89dc1b1db12924d48e7baa21894db1f89c16d63b
+    reviewed_by: kenny.lee
+    safe_revision: 5708e2f7cb8d87de5d4799a9eda01c5b5c6587c0
   test/anomaly_test_helper.rb:
     comments:
-    reviewed_by: ollietulloch
-    safe_revision: e549c0dcafdd6004ec279bd256fae8b9964c9629
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/canql_test.rb:
     comments:
     reviewed_by: timgentry
     safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
   test/events_test_helper.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/minitest_helper.rb:
     comments:
-    reviewed_by: timgentry
-    safe_revision: 6932d590299ad4a9d2ba24b425b158c67142bf74
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/anomaly_test.rb:
     comments:
     reviewed_by: drewthorp
     safe_revision: c40b4facb6f7d5dc5173345b46343c0ecc18f816
   test/nodes/case_age_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/case_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 7490099869e368dcd5c26ded11eb90229baf4cae
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/code_test.rb:
     comments:
     reviewed_by: kenny.lee
-    safe_revision: 7580eb6b1196dec1fb778ee345d2bce50ef0f7c7
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/e_base_records_test.rb:
     comments:
     reviewed_by: ollietulloch
     safe_revision: b7af9756bba9a1c67d05dda58c6b7446827f1a7e
   test/nodes/events_test.rb:
     comments:
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/genetic_tests_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/main_case_test.rb:
     comments:
     reviewed_by: josh.pencheon
@@ -274,11 +274,11 @@ file safety:
   test/nodes/mother_e_base_records_test.rb:
     comments:
     reviewed_by: kenny.lee
-    safe_revision: 99ef15c6610409a1562e6a03b015569d087b045f
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/patient_age_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/patient_test.rb:
     comments:
     reviewed_by: kenny.lee
@@ -293,17 +293,17 @@ file safety:
     safe_revision: 293248a17d087d7557a6aacdcb5bf3fbec946b87
   test/nodes/test_result_groups_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 9bb663b220e76e78f3f0f48e4bc6334fe9451925
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/nodes/test_results_test.rb:
     comments:
-    reviewed_by: josh.pencheon
-    safe_revision: 511e4238f83eb5b32839c25d94ec2a59145539bb
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
   test/parser_test.rb:
     comments:
     reviewed_by: josh.pencheon
     safe_revision: 3ace8794c1c545b47898da1fbee49af8afdbf521
   test/test_helper.rb:
     comments: existing typo
-    reviewed_by: kennylee
-    safe_revision: f75b0b0cbe0e60bab037b32ab99aaf7fb6339d3d
+    reviewed_by: kenny.lee
+    safe_revision: 366718de367121fa0d40d0fa8aaa06bdd48ed2d0
